fix(style): Modify dropdown to fix hamburger overlap

--- a/frontend/src/components/header/Header.module.css
+++ b/frontend/src/components/header/Header.module.css
@@ -127,7 +127,7 @@
 }
 
 /* Media query for larger screens */
-@media (min-width: 1500px) {
+@media (min-width: 651px) {
     .dropdown {
         display: none;
     }
